test/files/neg/yimports-stable/C_2.scala
//> using options -Yimports:scala,scala.Predef,hello.world.potions
//
class C {
  val v: Numb = magic
  def greet() = println("hello, world!")
}
